fix z-index

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -35,7 +35,7 @@ button {
   position: fixed;
   top: 0%;
   left: 0%;
-  z-index: 0;
+  z-index: 80;
   width: 100%;
   height: 100vh;
   background-image: url("url_de_votre_image.jpg");
@@ -47,7 +47,7 @@ body {
   font-family: "Open Sans", sans-serif;
   padding: 1em 3em 0em 3em;
   header {
-    z-index: -1;
+    z-index: 1;
   }
   // Styles de la section principale
   main {
@@ -61,7 +61,7 @@ body {
     ._1 {
       nav {
         position: absolute;
-        z-index: -1;
+        z-index: 1;
         ul {
           p {
             margin-bottom: 0.6em;
@@ -186,7 +186,7 @@ body {
   footer {
     position: relative;
 
-    z-index: -1;
+    z-index: 1;
     margin: 3em 0 0em 0;
 
     display: flex;
